Fixed scrollbar

--- a/src/sass/base/_scrollbar.scss
+++ b/src/sass/base/_scrollbar.scss
@@ -14,8 +14,7 @@
 ::-webkit-scrollbar-thumb {
   cursor: pointer;
   border: 3px solid transparent;
-  // background: var(--color-scrollbar);
-  background: transparent;
+  background: var(--color-primary);
   border-radius: 10px;
   background-clip: content-box;
 
